fix: Apply z-index hierarchy

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 3; 
+    z-index: 5; 
 }
 
 .logo {
@@ -77,7 +77,7 @@ header nav ul li:hover::after {
     left: 50%;
     transform: translate(-50%,-50%);
     filter: blur(50px);
-    z-index: 1;
+    z-index: 2;
     animation: pulse 3s infinite alternate;
 }
 
@@ -126,7 +126,7 @@ header nav ul li:hover::after {
     align-items: center;
     justify-content: center;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 .product-img img {
@@ -153,7 +153,7 @@ header nav ul li:hover::after {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    z-index: 2;
+    z-index: 4;
     flex-direction: column;
 }
 
@@ -217,7 +217,7 @@ header nav ul li:hover::after {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 99;
+    z-index: 5;
 }
 
 .arrow-btn {
@@ -259,7 +259,7 @@ header nav ul li:hover::after {
     flex-direction: column;
     align-items: center;
     gap: 15px;
-    z-index: 99;
+    z-index: 5;
 }
 
 .numbers {
@@ -293,6 +293,7 @@ header nav ul li:hover::after {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index: 1;
 }
 
 .circle {
